fix gap

--- a/src/components/layout/header/Header.scss
+++ b/src/components/layout/header/Header.scss
@@ -81,12 +81,12 @@
 
     &__wrapper-button {
         @include flex-align(center, center);
+        gap: 0.8rem;
 
         i {
             color: #000;
             padding: 3px 6px;
             font-size: 2rem;
-            margin: 0 5px;
 
             &:hover {
                 border-radius: 6px;
